--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -4,11 +4,18 @@ FROM python:3.9-slim
 # Set the working directory
 WORKDIR /app
 
-# Copy everything from the project root (including image_fetcher.py)
-COPY . /app
+# Copy requirements.txt first (for Docker layer caching)
+COPY server/requirements.txt /app/requirements.txt
 
-# Install dependencies
-RUN pip install --no-cache-dir grpcio grpcio-tools pillow requests
+# Install dependencies from requirements.txt
+RUN pip install --no-cache-dir -r /app/requirements.txt
+
+# Copy the server source code
+COPY server /app/server
+
+# Also copy the generated folder and image_fetcher
+COPY generated /app/generated
+COPY image_fetcher.py /app/image_fetcher.py
 
 # Set the PYTHONPATH to include the project root
 ENV PYTHONPATH=/app
