adding tests to docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,12 @@ services:
       - "50051:50051"
     networks:
       - grpc-network
+    healthcheck:
+      test: ["CMD", "grpc_health_probe", "-addr", "localhost:50051"]
+      interval: 30s
+      retries: 3
+      start_period: 10s
+      timeout: 10s
 
   client:
     build:
@@ -24,8 +30,6 @@ services:
     networks:
       - grpc-network
 
-
-    
   proxy:
     build:
       context: .  # Project root
@@ -47,8 +51,19 @@ services:
     networks:
       - grpc-network
 
+  tests:
+    build:
+      context: . 
+      dockerfile: tests/Dockerfile
+    depends_on:
+      - server  # Ensure the server is up before running tests
+    networks:
+      - grpc-network
+    environment:
+      - ENV_FILE=.env
+    entrypoint: ["python", "-m", "unittest", "discover", "-s", "tests"]
+    # or use entrypoint: ["pytest", "tests/"] if using pytest
+
 networks:
   grpc-network:
     driver: bridge
-
-
